<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/parent_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.Weather.FullscreenContainer.Cloud"
    tools:context=".view.MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/map"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="15dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/arch"
            android:layout_width="30dp"
            android:layout_height="30dp">

            <ImageView
                android:layout_gravity="center"
                android:background="@drawable/map"
                android:layout_width="20dp"
                android:layout_height="20dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/favourite"
            app:layout_constraintBottom_toTopOf="@+id/current_forecast_details_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="20dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/arch"
            android:layout_width="40dp"
            android:layout_height="40dp">

            <ImageView
                android:layout_gravity="center"
                android:background="@drawable/fav"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/header_layout"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/sea_cloudy"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/current_degree_header"
                android:text="@string/hint_degree"
                style="@style/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/current_weather"
                android:text="@string/hint_weather"
                style="@style/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/current_forecast_details_layout"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="start"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/min_degree"
                    android:text="@string/hint_degree"
                    style="@style/regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/hint_min"
                    style="@style/regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/current_degree"
                    android:text="@string/hint_degree"
                    style="@style/regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/hint_current"
                    style="@style/regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:gravity="end"
                android:layout_gravity="center"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/max_degree"
                    android:text="@string/hint_degree"
                    style="@style/regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/hint_max"
                    style="@style/regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

<!--            <ScrollView-->
<!--                app:layout_constraintTop_toBottomOf="@+id/current_forecast_details_layout"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->
<!--                <androidx.recyclerview.widget.RecyclerView-->
<!--                    android:id="@+id/forecast"-->
<!--                    android:padding="15dp"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"/>-->
<!--            </ScrollView>-->

        <ScrollView
            app:layout_constraintTop_toBottomOf="@+id/current_forecast_details_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/forecast"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>

        <TextView
            android:id="@+id/connectionState"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/tiny"
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>